--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/sheikhoo-favicon.png" />
-    <link rel="preload" as="image" href="./src/assets/sheikhoo-steel-video-banner.webp" />
+    <link rel="preload" as="image" href="/src/assets/sheikhoo-steel-video-banner.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sheikhoo Steel - A Company That Steels the Spotlight</title>
   </head>
